added yaml and factory

--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
     testImplementation 'junit:junit:4.12'
+    implementation 'org.yaml:snakeyaml:1.23'
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
