--- a/src/main/resources/teamx.config.yml
+++ b/src/main/resources/teamx.config.yml
@@ -1,9 +1,17 @@
 subsystems:
   drivetrain:
     talons:
-      leftMain: 13
-      rightMain: 14
+      leftMain: 3
+      rightMain: 2
+      leftFollower: 13
+      rightFollower: 1
+    invertMotor:
+      - rightMain
   canon:
+    implemented: false
+    talons:
+      mainShooter: 5
+      mainFollower: 4
     invertMotor:
       - mainFollower
 
